--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             formConfig.buddyName = urlParams.get('buddyName') || 'Unknown Buddy';
             formConfig.hrRep = urlParams.get('hrRep') || 'Unknown HR';
             formConfig.recordId = urlParams.get('recordId') || 'Unknown ID';
-            formConfig.formUrl = urlParams.get('formUrl') || `https://uploadpage-git-main-vaishnavi-lalwalas-projects.vercel.app/onboarding?${urlParams.toString()}`;
+            formConfig.formUrl = urlParams.get('formUrl') || `https://uploadpage-git-main-vaishnavi-lalwalas-projects.vercel.app/?${urlParams.toString()}`;
             console.log('Form Config:', formConfig);
         }
 
