--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             formData.append('addressProof', uploadedFiles.address);
             formData.append('offerLetter', uploadedFiles.offer);
 
-            const webhookUrl = 'http://localhost:5678/webhook-test/onboarding-form-submit'; // Replace with your n8n webhook URL
+            const webhookUrl = 'http://localhost:5678/webhook-test/'; // Replace with your n8n webhook URL
 
             let attempts = 0;
             const maxAttempts = 3;
