--- a/public/index.html
+++ b/public/index.html
@@ -271,7 +271,7 @@
             formData.append('addressProof', uploadedFiles.address);
             formData.append('offerLetter', uploadedFiles.offer);
 
-            const webhookUrl = 'https://uploadpage-git-main-vaishnavi-lalwalas-projects.vercel.app/api/submit';
+            const webhookUrl = 'https://uploadpage-git-main-vaishnavi-lalwalas-projects.vercel.app/pages/api/submit';
 
             let attempts = 0;
             const maxAttempts = 3;
