--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
             formConfig.buddyName = urlParams.get('buddyName') || 'Unknown Buddy';
             formConfig.hrRep = urlParams.get('hrRep') || 'Unknown HR';
             formConfig.recordId = urlParams.get('recordId') || 'Unknown ID';
-            formConfig.formUrl = urlParams.get('formUrl') || `https://uploadpage-git-main-vaishnavi-lalwalas-projects.vercel.app/?${urlParams.toString()}`;
+            formConfig.formUrl = urlParams.get('formUrl') || `https://uploadpage-seven.vercel.app/api/upload-documents/`;
             console.log('Form Config:', formConfig);
         }
 
@@ -271,7 +271,7 @@
             formData.append('addressProof', uploadedFiles.address);
             formData.append('offerLetter', uploadedFiles.offer);
 
-            const webhookUrl = 'https://uploadpage-git-main-vaishnavi-lalwalas-projects.vercel.app/api/upload-documents';
+            const webhookUrl = 'https://uploadpage-seven.vercel.app/api/upload-documents';
 
 
             let attempts = 0;
