--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
             formConfig.buddyName = urlParams.get('buddyName') || 'Unknown Buddy';
             formConfig.hrRep = urlParams.get('hrRep') || 'Unknown HR';
             formConfig.recordId = urlParams.get('recordId') || 'Unknown ID';
-            formConfig.formUrl = urlParams.get('formUrl') || `https://uploadpage-seven.vercel.app/api/upload-documents/`;
+            formConfig.formUrl = urlParams.get('formUrl') || `https://uploadpage-seven.vercel.app/`;
             console.log('Form Config:', formConfig);
         }
 
