--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         <div class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white text-center py-12 px-6 relative">
             <div class="absolute inset-0 bg-[radial-gradient(circle,rgba(255,255,255,0.1)_0%,transparent_70%)] animate-pulse"></div>
             <h1 class="text-4xl font-bold relative z-10">📄 Document Upload</h1>
-            <p class="text-lg mt-2 opacity-90 relative z-10">Please upload the required documents</p>
+            <p class="text-lg mt-2 opacity-90 relative z-10" id="candidateGreeting">Please upload the required documents</p>
         </div>
 
         <!-- Content -->
@@ -148,11 +148,11 @@
         // Initialize formConfig with query parameters and Airtable data
         async function initializeFormConfig() {
             const params = new URLSearchParams(window.location.search);
-            const candidateName = params.get("candidateName");
-            const airtableUrl = `https://api.airtable.com/v0/appMvECrw7CrJFCO0/tblqaH9RrTO6JuG5N/${candidateName}`;
+            const candidateName = params.get("candidateName") || 'Unknown Name';
+            const airtableUrl = `https://api.airtable.com/v0/appMvECrw7CrJFCO0/tblqaH9RrTO6JuG5N?filterByFormula=${encodeURIComponent(`{candidateName}='${candidateName}'`)}`;
 
             // Set default values
-            formConfig.candidateName = params.get('candidateName') || 'Unknown Name';
+            formConfig.candidateName = candidateName;
             formConfig.candidateEmail = params.get('candidateEmail') || 'unknown@example.com';
             formConfig.candidatePhone = params.get('candidatePhone') || 'Unknown Phone';
             formConfig.position = params.get('position') || 'Unknown Position';
@@ -161,33 +161,44 @@
             formConfig.buddyEmail = params.get('buddyEmail') || 'unknown@bluedataconsulting.in';
             formConfig.buddyName = params.get('buddyName') || 'Unknown Buddy';
             formConfig.hrRep = params.get('hrRep') || 'Unknown HR';
-            formConfig.recordId = candidateId || 'Unknown ID';
-            // Generate unique form URL based on candidateId
-            formConfig.formUrl = candidateName
-                ? `https://uploadpage-seven.vercel.app/?candidateName=${candidateName}`
+            formConfig.recordId = 'Unknown ID';
+            // Generate unique form URL based on candidateName
+            formConfig.formUrl = candidateName !== 'Unknown Name' 
+                ? `https://uploadpage-seven.vercel.app/?candidateName=${encodeURIComponent(candidateName)}`
                 : `https://uploadpage-seven.vercel.app/`;
 
-            if (candidateId) {
+            // Update greeting with candidate's name
+            const greetingElement = document.getElementById('candidateGreeting');
+            greetingElement.textContent = `Welcome, ${formConfig.candidateName}! Please upload the required documents`;
+
+            if (candidateName !== 'Unknown Name') {
                 try {
                     const response = await fetch(airtableUrl, {
                         headers: {
-                            Authorization: `Bearer AIRTABLE_API_KEY`, // Replace with your Airtable API key
+                            Authorization: `Bearer YOUR_AIRTABLE_API_KEY`, // Replace with your Airtable API key
                             'Content-Type': 'application/json'
                         }
                     });
                     if (response.ok) {
                         const data = await response.json();
-                        const fields = data.fields || {};
-                        // Update formConfig with Airtable data if available
-                        formConfig.candidateName = fields.candidateName || formConfig.candidateName;
-                        formConfig.candidateEmail = fields.candidateEmail || formConfig.candidateEmail;
-                        formConfig.candidatePhone = fields.candidatePhone || formConfig.candidatePhone;
-                        formConfig.position = fields.position || formConfig.position;
-                        formConfig.department = fields.department || formConfig.department;
-                        formConfig.startDate = fields.startDate || formConfig.startDate;
-                        formConfig.buddyEmail = fields.buddyEmail || formConfig.buddyEmail;
-                        formConfig.buddyName = fields.buddyName || formConfig.buddyName;
-                        formConfig.hrRep = fields.hrRep || formConfig.hrRep;
+                        const record = data.records && data.records[0];
+                        if (record) {
+                            const fields = record.fields || {};
+                            formConfig.candidateName = fields.candidateName || formConfig.candidateName;
+                            formConfig.candidateEmail = fields.candidateEmail || formConfig.candidateEmail;
+                            formConfig.candidatePhone = fields.candidatePhone || formConfig.candidatePhone;
+                            formConfig.position = fields.position || formConfig.position;
+                            formConfig.department = fields.department || formConfig.department;
+                            formConfig.startDate = fields.startDate || formConfig.startDate;
+                            formConfig.buddyEmail = fields.buddyEmail || formConfig.buddyEmail;
+                            formConfig.buddyName = fields.buddyName || formConfig.buddyName;
+                            formConfig.hrRep = fields.hrRep || formConfig.hrRep;
+                            formConfig.recordId = record.id || formConfig.recordId;
+                            // Update greeting with fetched name
+                            greetingElement.textContent = `Welcome, ${formConfig.candidateName}! Please upload the required documents`;
+                        } else {
+                            showAlert('No candidate found with the provided name in Airtable.');
+                        }
                     } else {
                         showAlert('Failed to fetch candidate data from Airtable.');
                     }
@@ -304,14 +315,14 @@
             submitBtn.disabled = true;
 
             const params = new URLSearchParams(window.location.search);
-            const candidateName = params.get("candidateName");
+            const candidateName = params.get("candidateName") || 'Unknown Name';
 
             try {
                 // Convert files to base64
                 const filePromises = Object.entries(uploadedFiles).map(async ([type, file]) => {
                     if (file) {
                         const base64 = await fileToBase64(file);
-                        return { type, base64, filename: file.name };
+                        return { type, base64, filename: `${candidateName}_${type}.${file.name.split('.').pop()}` };
                     }
                     return null;
                 });
@@ -326,10 +337,11 @@
                     },
                     body: JSON.stringify({
                         candidateName,
+                        recordId: formConfig.recordId,
                         files,
                         airtableBaseId: 'appMvECrw7CrJFCO0',
                         airtableTableId: 'tblqaH9RrTO6JuG5N',
-                        airtableApiKey: 'AIRTABLE_API_KEY' // Replace with your Airtable API key or handle server-side
+                        airtableApiKey: 'YOUR_AIRTABLE_API_KEY' // Replace with your Airtable API key or handle server-side
                     })
                 });
 
