--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
             const airtableUrl = `https://api.airtable.com/v0/appMvECrw7CrJFCO0/tblqaH9RrTO6JuG5N?filterByFormula=${encodeURIComponent(`{candidateName}='${candidateName}'`)}`;
 
             // Set default values
-            formConfig.candidateName = candidateName;
+            formConfig.candidateName = params.get('candidateName');
             formConfig.candidateEmail = params.get('candidateEmail') || 'unknown@example.com';
             formConfig.candidatePhone = params.get('candidatePhone') || 'Unknown Phone';
             formConfig.position = params.get('position') || 'Unknown Position';
@@ -175,7 +175,7 @@
                 try {
                     const response = await fetch(airtableUrl, {
                         headers: {
-                            Authorization: `Bearer YOUR_AIRTABLE_API_KEY`, // Replace with your Airtable API key
+                            Authorization: `Bearer AIRTABLE_API_KEY`, // Replace with your Airtable API key
                             'Content-Type': 'application/json'
                         }
                     });
@@ -341,7 +341,7 @@
                         files,
                         airtableBaseId: 'appMvECrw7CrJFCO0',
                         airtableTableId: 'tblqaH9RrTO6JuG5N',
-                        airtableApiKey: 'YOUR_AIRTABLE_API_KEY' // Replace with your Airtable API key or handle server-side
+                        airtableApiKey: 'AIRTABLE_API_KEY' // Replace with your Airtable API key or handle server-side
                     })
                 });
 
